style.css
body
{
	background-color:lavenderblush;
}

.imagedisplay
{
	padding-right: 75px;
	padding-left: 75px;
}

.slidecontainer {
  width: 100%;
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 25px;
  background: lavender;
  outline: none;
  opacity: 0.7;
  -webkit-transition: .2s;
  transition: opacity .2s;
}

.slider:hover {
  opacity: 1;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 10px;
  height: 10px;
  background: #4CAF50;
  cursor: pointer;
}

.slider::-moz-range-thumb {
  width: 4px;
  height: 20px;
  background: #4CAF50;
  cursor: pointer;
}

.red::-moz-range-thumb 
{
  background: #800000;
}

.blue::-moz-range-thumb 
{
  background: #002699;
}

.green::-moz-range-thumb 
{
  background: #4CAF50;
}

.preview
{
	max-height:400px;
}

canvas
{
  width: 80%;
  
}

